Revision history for Test-Deep

0.110     2012-06-16

          Allow methods() and listmethods() to work again on class methods
          (RT#77804) (thanks, Ricardo Signes!)

0.109     2012-02-16

          UNIVERSAL::isa and UNIVERAL::can are no longer called as functions:
          this was deprecated in UNIVERSAL 1.03. (RT#74760, Karen Etheridge)

          the code that builds the exporter configuration is cleaned up; more
          documentation of how it may change (for the better, without breaking
          stuff) should appear in the near future

0.108     2010-10-15

          simple (stringwise) comparison should now be much faster (thanks,
          NCLEATON)

0.107     2009-10-28

          New maintainer:  Ricardo Signes (rjbs)

          On 5.10.0 and newer perl, install to the "site" directory, not the
          core perl directory in @INC.  (Prior to 5.10.0, @INC ordering was
          unfortunate, and fixing the install target would make upgrading
          difficult.)

          cope with new stringification of qr{} objects in 5.13.x+ (thanks,
          ANDK)

          fix Pod escaping errors (thanks, FWIE)

0.106

          Release after dev.

0.105-dev

          Fix for perl 5.010.1 - the code to check the version and act
          correctly on regexp refs treated .1 as behaving like 5.011.

0.104

          Document behaviour of cmp_bag when a non ARRAY-ref argument is passed
          to it. Explicity test for this a die with a useful message.

          Document and export cmp_details and deep_diag, thanks to Tom Hukins
          for the patch.

0.103

          Detect whether isa() is being called with 1 or 2 arguments and
          dispatch to the correct function. This is hacky but fixes the problem
          of clashing with UNIVERSAL::isa().

0.102

          Behave well when a code comparator doesn't give diagnostics. Thanks
          to Alex Kapranoff.

0.101

          Fix an overloading problem with All and Any. Thanks to Kostas